<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/frag_request"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_between_text_boxes">

        <TextView
            android:id="@+id/tv_net_id_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/net_id" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"></View>
        <TextView
            android:id="@+id/tv_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textSize="18sp"
            android:layout_gravity="right"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:padding="5dp"
            android:background="@drawable/btn_colors"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_message"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/message"
            android:textColor="#FFF"
            android:textStyle="bold"/>
    </ScrollView>
</LinearLayout>