<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="@drawable/background">
    <EditText
        android:id="@+id/et_net_id"
        android:background="@drawable/wood"
        android:textColorHint="#CCC"
        android:textColor="#FFF"
        android:paddingLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/net_id"
        android:layout_marginTop="@dimen/margin_between_text_boxes"
        android:layout_marginBottom="@dimen/margin_between_text_boxes" />
    <EditText
        android:id="@+id/et_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wood"
        android:textColorHint="#CCC"
        android:textColor="#FFF"
        android:paddingLeft="15dp"
        android:hint="@string/message"
        android:layout_marginTop="@dimen/margin_between_text_boxes"
        android:layout_marginBottom="@dimen/margin_between_text_boxes"/>
    <Button
        android:id="@+id/btn_help"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:text="@string/help"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"
        android:onClick="help_button_clicked"
        android:background="@drawable/red_button_background"/>
    <TextView
        android:id="@+id/tv_output_messages_to_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:textSize="25sp"/>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_adminstrator"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_colors"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/adminstrator"
            android:onClick="run_admin_log_in"/>
    </LinearLayout>

</LinearLayout>